// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> component should have the default props values when mounted 1`] = `
Object {
  "activeClass": "active",
  "aria": false,
  "checked": false,
  "checkedClass": "checked",
  "children": null,
  "defaultChecked": false,
  "determinateClass": null,
  "disabled": false,
  "disabledClass": "disabled",
  "focusClass": "focus",
  "hoverClass": "hover",
  "increaseArea": "",
  "indeterminate": true,
  "indeterminateClass": "indeterminate",
  "inheritClass": false,
  "inheritID": false,
  "insert": null,
  "label": null,
  "labelClassName": null,
  "labelHover": true,
  "labelHoverClass": "hover",
  "labelTag": "span",
  "labelTagClassName": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "radioClass": "iradio",
}
`;

exports[`<Radio /> component should render the corresponding HTML when only the default props are set 1`] = `
<div
  class="iradio indeterminate"
>
  <input
    style="opacity:0;position:absolute"
    type="radio"
    value=""
  />
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;

exports[`<Radio /> component should render the corresponding HTML when the label is set as a prop string value 1`] = `
<label>
  <div
    class="iradio indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="radio"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <span>
    label
  </span>
</label>
`;

exports[`<Radio /> component should render the corresponding HTML when the label is set as children with labelTag prop set to <div /> 1`] = `
<label>
  <div
    class="iradio indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="radio"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <div>
    <span>
      label
    </span>
  </div>
</label>
`;
